@@ -19,7 +19,6 @@ Imports: Rcpp
 LinkingTo: Rcpp
 SystemRequirements: The Boost 'program_options' library <https://boost.org> is required.
 OS_type: unix
-StagedInstall: no
 License: GPL (>= 2)
 URL: https://vowpalwabbit.org/, https://github.com/eddelbuettel/rvowpalwabbit
 BugReports: https://github.com/eddelbuettel/rvowpalwabbit/issues
